--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~48.0.6",
+    "expo-dev-client": "~2.1.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-date-picker": "^4.2.9",
+    "react-native-gesture-handler": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
