--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
     "expo-dev-client": "~2.1.5",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
