--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~48.0.6",
     "expo-dev-client": "~2.1.5",
     "expo-font": "~11.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
