--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#1B1E23"
       },
       "package": "com.lucabla.TodoIU"
     },
