fix reanimated bug

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "TodoIU",
+    "name": "DailyDrill",
     "slug": "TodoIU",
     "version": "1.0.0",
     "orientation": "portrait",
