--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native-date-picker": "^4.2.9",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.0.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
